# aoc

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
aoc2020/: README.md  aocli.py  base_resolver.py
aoc2020/Day1/: part1.py  part2.py
aoc2020/Day2/: part_1_2.py
aoc2020/Day3/: solution.py
aoc2020/Day4/: solution.py
aoc2020/day5/: dummy_solution.txt  old_solution.py  solution.py
aoc2020/day6/: solution.py
aoc2020/day7/: solution.py
aoc2020/day8/: solution.py
aoc2020/day9/: solution.py
aoc2020/tests/: tests.py
aoc2021/: aocli.py  base_resolver.py  info.txt  initializer.py
aoc2021/day1/: solution.py
aoc2021/day10/: solution.py
aoc2021/day11/: solution.py
aoc2021/day12/: solution.py
aoc2021/day13/: input2_testcase.txt  solution.py
aoc2021/day14/: solution.py
aoc2021/day15/: solution.py
aoc2021/day16/: solution.py
aoc2021/day17/: solution.py
aoc2021/day18/: input2_testcase.txt  output1_testcase.txt  solution.py
aoc2021/day2/: solution.py
aoc2021/day3/: solution.py
aoc2021/day4/: solution.py
aoc2021/day5/: solution.py
aoc2021/day6/: solution.py
aoc2021/day7/: solution.py
aoc2021/day8/: digits.txt  solution.py
aoc2021/day9/: solution.py
tests/: test_aoc.py
