[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Sivan Becker <sbecker@infinidat.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = "^8.0.3"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pudb = "^2021.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
